<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ This file is part of Birthday Widget.
  ~
  ~ Birthday Widget is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Birthday Widget is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Birthday Widget.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Copyright (c) Lukas Marek, 2011.
  -->

<resources>
	<!-- Buttons -->
	<string name="save">Save</string>
	<string name="ok">Ok</string>
    <string name="discard">Cancel changes</string>
	

    <string name="app_name">Birthday</string>
    <string name="widget_name">Birthday Widget</string>
    <string name="widget_name2x1">Birthday Widget 2x1</string>
    <string name="widget_name2x2">Birthday Widget 2x2</string>
    <string name="widget_name4x1">Birthday Widget 4x1</string>
    <string name="empty"></string>
    <string name="loading">Loading birthdays from contacts</string>
    <string name="no_name_found">No birthday found.</string>
    <string name="crash_toast_text">Ooops. Birthday has crashed, we are working hard on fixing this!</string>    
    
    <!-- Preferences -->
    <string name="preferences_menu">Preferences</string>    
    <string name="date_format_title">Date format</string>
    <string name="date_format_summary">Set display date format</string>
    <string name="birthday_template_title">Birthday greetings</string>
    <string name="template_summary">Edit your predefined template. {0} is replaced by contact name, {1} by event title.</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_enabled">Enabled</string>    
    <string name="notifications_time">Notification at</string>
    <string name="general">General</string>
    
    <!-- Debug view -->
    <string name="debug_menu">Debug view</string>
    <string name="debug_raw">Raw data: {0}</string>
    <string name="debug_parsed">Parsed as: {0}</string>
    
    <!-- Help view -->
    <string name="help_menu">Help</string>
    <string name="help_string">\nIn case of any troubles use Menu -> Debug mode\n\nOr check FAQ at www.krtinec.cz/Home/bdwidget\n\nContact: lukas.marek@gmail.com\n\nAnd don\'t forget to follow me on twitter.com/BDWidget\n</string>
    <string name="help_title">Birthday Help</string>
    <string name="no_data_found">No birthdays found in your contacts.\nPlease set some via Google Contacts.</string>
    
    <!-- Context menu -->
    <string name="context_menu_header">Congratulate by</string>
    <string name="context_menu_call">call</string>
    <string name="context_menu_text">text</string>
    <string name="context_menu_email">e-mail</string>
    
    <string name="congrats_subject">Congratulations</string>
    <string name="congrats_pattern">Dear {0}, I wish you a very happy {1}!</string>
    
    <string name="notification_alert">{0} alert!</string>
    <string name="notification_pattern">Hurry up, {0} has {1}!</string>
    
    <string name="anniversary">anniversary</string>
    <string name="birthday">birthday</string>
    <string name="other">other</string>

    <!-- Greetings templates -->
    <string name="anniversary_template_title">Anniversary greetings</string>
    <string name="custom_template_title">Custom greetings</string>
    <string name="other_template_title">Other greetings</string>

    <string name="greetings">Greetings</string>

    <string name="add_bday_menu">Add event</string>
    <string name="edit">Edit</string>

    <string name="description_plus_button">Add</string>
    <string name="description_minus_button">Remove</string>
    <string name="error">Error</string>
    <string name="save_error">An error occurred during save. Sorry.</string>
    <string name="wait_dialog">Please wait...</string>


    <string name="choose_account">Choose account</string>
    <string name="event_type">Event type</string>

</resources>
